Thu Sep  4 18:36:21 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* html.c (WriteStyleSheet): Don't gettextize CVS ID marker string.

Thu Sep 04 16:34:03 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c: resize stats window if no-panels selected,
	  make New dialogue default to match

Thu Sep 04 11:12:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gnubg.c: Added CR/LF for copy to clipboard under windows
	* boards.xml: Added new 3d design (nature)

Wed Sep 03 22:04:45 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkmet.c (UpdateTable): avoid buffer overflow

Wed Sep  3 20:07:45 2003  Joern Thyssen  <jth@gnubg.org>

	* sgf.c (WriteLuck): uses 5 digits for luck to avoid
	rounding errors, e.g., after analysis you get 17.66% luck
	but after you get 17.63% as the luck is only saved with 3 digits.
	(reported by Chris D. Yep)

Wed Sep  3 19:12:12 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal): fix bug leading to
	strange cubes and play by external player (only player 0).
	(reported by Kees van den Doel)

Wed Sep  3 18:44:13 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ExpandMatMove,ParseMatMove): show warning
	instead of core dump on garbage in .mat files
	(reported by Kees van den Doel)

Tue Sep  2 23:56:28 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* show.c (CommandShowVersion): Deal with gettext.
	* progress.c (TextRolloutProgress): Ditto.

Tue Sep 02 21:48:18 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* analysis.c (getMarketWindowDividerMWC, updateStatcontext):
	fix typo, calculate doubling window for the correct player

Tue Sep 02 11:16:46 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c added option to switch between list/panels for statistics

Tue Sep 02 00:03:39 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (SetAnnotation), gtkcube.c (CreateCubeAnalysis):
	  tidy up GUI double/take annotation

Mon Sep 01 23:29:12 2003 GMT  Holger Bochnig <hbgg@gmx.net>
