@@ -1,3 +1,8 @@
+Fri Sep  5 09:26:15 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>
+
+	* gnubg.c (TextToClipboard): Deal with Japanese WIN32 clipboard
+	encoding.
+
 Thu Sep  4 18:36:21 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* html.c (WriteStyleSheet): Don't gettextize CVS ID marker string.
